src/components/PostDetail.module.css
.post_detail{
  margin-bottom: 2em;
  border: 1px solid #444;
  border-radius: 10px;
  padding: 1em;
}

.post_detail img{
  max-width: 600px;
  
}

.post_detail h2{
  margin-bottom: 2em;
}
.post_detail .tags{
  margin-bottom: 1.2em;
  display: flex;

}
.tags p{
  margin-right:.5em ;
}
.tags span{
  font-weight: bold;
}
.createdBy{
  font-style: italic;
  color: #444;
  font-size: .8em;
  margin-bottom: 1em;
}

